# smart-camera

./: CMakeLists.txt  Core.h  README.md  V4L2Camera.cpp  security-camera-project.txt
docs/: security-camera-project.txt
include/: camera_device.hpp  event_detector.hpp  motion_detector.hpp
src/: camera_device.cpp  main.cpp  motion_detector.cpp
